Fixed a bug and begin launch4j on maven